# BAMSI

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Dockerfile  Implementing BAMSI Project Execution Plan.md  LICENSE  NOTICE  README.md  SECURITY.md  reconstructed.bam  task.md
.github/workflows/: build.yml  determinism.yml  format-version.yml  lint.yml  nightly.yml  sanitisers.yml  test.yml
benchmarks/: manifest.json
benchmarks/results/v1.0.0/: benchmark_tables.md  environment_20260507_204552.txt  synthetic_10_bamsi_20260507_204552.csv
benchmarks/scripts/: generate_tables.py  run_benchmarks.sh
data/test/: synthetic_10k.bam
docs/: PROJECT.md  algorithms.md  api.md  audit.md  cli.md  clinical.md  dependency_freeze.md  development.md  format.md
docs/decisions/: 0001-language-track.md  0002-dependency-pinning.md  0003-target-platforms.md  0004-benchmark-datasets.md  0005-licence-and-distribution.md  0006-benchmark-hardware.md  0007-dependency-freeze-policy.md  0008-codec-defaults.md
docs/gates/: gate-0-download-wip.md  gate-0.md  gate-1.md  gate-2.md  gate-3.md  gate-5.md
docs/imp/: BAMSI_Execution_Plan_v2_0.md
docs/notes/: reading-checklist.md
docs/runbooks/: determinism-failure.md
docs/tutorials/: 01-motif-counting.md  01_motif_counting.md  02-region-query.md  02_region_query.md  03-quality-postfilter.md  03_quality_postfilter.md
include/bamsi/: app.hpp  bamsi.h  bamsi.hpp  config.hpp.in  format.hpp  i_app.hpp  result.hpp  sdsl_compat.hpp  status.hpp  types.hpp  version.hpp
include/bamsi/cli/: dispatch.hpp  help.hpp  version.hpp
include/bamsix/: app.hpp  bamsix.h  bamsix.hpp  config.hpp.in  format.hpp  i_app.hpp  result.hpp  status.hpp  types.hpp  version.hpp
include/bamsix/cli/: dispatch.hpp  help.hpp  version.hpp
scripts/: build_deps.sh  github_push_v1.sh  install_samtools.sh  run_fuzzer.sh  staged_commit.sh  verify_bamsix_operations.sh  verify_bruteforce.sh  verify_datasets.sh
spec/: BAMSI_Architecture_v4_3.md  BAMSI_Contract_v3_3.md
src/: CMakeLists.txt
src/bitvectors/: bitvectors.cpp  bitvectors.hpp
src/cabi/: cabi.cpp  version.cpp  version.hpp
src/cli/: app.cpp  build.cpp  build.hpp  dispatch.cpp  dispatch_new.cpp  dispatch_user.cpp  dispatch_user_new.cpp  help.cpp  main.cpp  version.cpp
src/fmindex/: fmindex.cpp  fmindex.hpp
src/format/: format.cpp  format.hpp  placeholder.cpp
src/ingest/: ingest.cpp  ingest.hpp
src/mapping/: mapping.cpp  mapping.hpp  mapping_new.cpp  mapping_new.hpp
src/ordering/: ordering.cpp  ordering.hpp
src/query/: query.cpp  query.hpp  query_new.cpp  query_new.hpp
src/reconstruct/: reconstruct.cpp  reconstruct.hpp
src/sais/: sais.cpp  sais.hpp
src/sarange/: sarange.cpp  sarange.hpp
src/seal/: seal.cpp  seal.hpp
src/seqbuilder/: seqbuilder.cpp  seqbuilder.hpp
src/streamencode/: mtf_rle_arith.cpp  mtf_rle_arith.hpp  streamencode.cpp  streamencode.hpp
src/windows/: windows.cpp  windows.hpp
tests/: CMakeLists.txt  gen_10k_bam.c  gen_test_bam.c  test_audit_v3_verification.cpp  test_audit_v4_verification.cpp  test_audit_v5_verification.cpp  test_benchmark_validation.cpp  test_block_directory.cpp  test_c_abi.c  test_codec_completeness.cpp  test_determinism.cpp  test_error_sweep.cpp  test_findings_fixes_regression.cpp  test_locate_sorted.cpp  test_lossy_e2e.cpp  test_reader.cpp  test_tier1_invariants.cpp  test_tier2_integration.cpp  test_tutorial_smoke.cpp  test_tutorial_validation.cpp  test_v1_roundtrip.cpp  test_v2_fm_correctness.cpp  test_v5_features.cpp  verify_fm.cpp
tests/fixtures/cli_schemas/: count.schema.json  info.schema.json  info_output.json  locate.schema.json
tests/fuzz/: fuzz_format_parser.cpp
tests/integration/: cli_smoke_test.cpp  version_cli_test.cpp
tests/unit/: version_test.cpp
workflows/: Snakefile  config.yaml  config_synthetic.yaml
